--- a/src/input.css
+++ b/src/input.css
@@ -19,11 +19,14 @@
   @apply text-sm font-medium text-[#222222] hover:font-bold;
 }
 .btn {
-  @apply w-[160px] h-[44px] rounded-full font-primary text-white leading-6 uppercase bg-[#DD3142] shadow-md;
+  @apply w-[160px] h-[44px] rounded-full font-primary text-white leading-6 uppercase bg-[#DD3142] shadow-md hover:cursor-pointer hover:border-1;
 }
 .peragraph {
   @apply text-[#6D6D6D] leading-[133%];
 }
 .learn-more {
   @apply text-[#DD3142] underline;
+}
+.contact-input {
+  @apply border-b-2 border-[#707070] w-full py-2 focus:border-0;
 }
