--- a/src/output.css
+++ b/src/output.css
@@ -191,9 +191,6 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -214,6 +211,12 @@
   }
   .z-10 {
     z-index: 10;
+  }
+  .col-span-full {
+    grid-column: 1 / -1;
+  }
+  .col-start-1 {
+    grid-column-start: 1;
   }
   .container {
     width: 100%;
@@ -281,12 +284,6 @@
   .grid {
     display: grid;
   }
-  .table {
-    display: table;
-  }
-  .h-0 {
-    height: calc(var(--spacing) * 0);
-  }
   .h-0\.5 {
     height: calc(var(--spacing) * 0.5);
   }
@@ -334,6 +331,9 @@
   }
   .h-\[436px\] {
     height: 436px;
+  }
+  .min-h-\[364px\] {
+    min-height: 364px;
   }
   .w-0 {
     width: calc(var(--spacing) * 0);
@@ -383,6 +383,9 @@
   .w-\[630px\] {
     width: 630px;
   }
+  .w-\[661px\] {
+    width: 661px;
+  }
   .w-\[664px\] {
     width: 664px;
   }
@@ -410,6 +413,9 @@
   .max-w-\[366px\] {
     max-width: 366px;
   }
+  .max-w-\[377px\] {
+    max-width: 377px;
+  }
   .max-w-\[432px\] {
     max-width: 432px;
   }
@@ -425,22 +431,15 @@
   .max-w-\[983px\] {
     max-width: 983px;
   }
+  .max-w-\[1070px\] {
+    max-width: 1070px;
+  }
   .max-w-\[1440px\] {
     max-width: 1440px;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -478,15 +477,6 @@
   .justify-end {
     justify-content: flex-end;
   }
-  .justify-items-center {
-    justify-items: center;
-  }
-  .justify-items-stretch {
-    justify-items: stretch;
-  }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
   .gap-2\.5 {
     gap: calc(var(--spacing) * 2.5);
   }
@@ -499,8 +489,8 @@
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
@@ -517,6 +507,9 @@
   .gap-\[36px\] {
     gap: 36px;
   }
+  .gap-x-\[39px\] {
+    column-gap: 39px;
+  }
   .gap-x-\[89px\] {
     column-gap: 89px;
   }
@@ -528,6 +521,9 @@
   }
   .gap-y-\[29px\] {
     row-gap: 29px;
+  }
+  .gap-y-\[52px\] {
+    row-gap: 52px;
   }
   .gap-y-\[60px\] {
     row-gap: 60px;
@@ -541,12 +537,11 @@
   .rounded-sm {
     border-radius: var(--radius-sm);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .bg-\[\#DD3142\] {
     background-color: #DD3142;
+  }
+  .bg-\[\#F9F9F9\] {
+    background-color: #F9F9F9;
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
@@ -596,20 +591,11 @@
   .p-13 {
     padding: calc(var(--spacing) * 13);
   }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
-  }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
-  }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
@@ -619,6 +605,9 @@
   }
   .py-\[31px\] {
     padding-block: 31px;
+  }
+  .py-\[33px\] {
+    padding-block: 33px;
   }
   .py-\[38px\] {
     padding-block: 38px;
@@ -644,6 +633,9 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
+  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
@@ -664,6 +656,9 @@
   }
   .pt-\[27px\] {
     padding-top: 27px;
+  }
+  .pt-\[37px\] {
+    padding-top: 37px;
   }
   .pt-\[40px\] {
     padding-top: 40px;
@@ -697,6 +692,12 @@
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
+  }
+  .pb-\[5px\] {
+    padding-bottom: 5px;
+  }
+  .pb-\[7px\] {
+    padding-bottom: 7px;
   }
   .pb-\[12px\] {
     padding-bottom: 12px;
@@ -771,6 +772,9 @@
   }
   .text-\[38px\] {
     font-size: 38px;
+  }
+  .text-\[40px\] {
+    font-size: 40px;
   }
   .text-\[44px\] {
     font-size: 44px;
@@ -847,10 +851,6 @@
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -905,6 +905,17 @@
   text-transform: uppercase;
   --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  &:hover {
+    @media (hover: hover) {
+      cursor: pointer;
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      border-style: var(--tw-border-style);
+      border-width: 1px;
+    }
+  }
 }
 .peragraph {
   --tw-leading: 133%;
@@ -914,6 +925,17 @@
 .learn-more {
   color: #DD3142;
   text-decoration-line: underline;
+}
+.contact-input {
+  width: 100%;
+  border-bottom-style: var(--tw-border-style);
+  border-bottom-width: 2px;
+  border-color: #707070;
+  padding-block: calc(var(--spacing) * 2);
+  &:focus {
+    border-style: var(--tw-border-style);
+    border-width: 0px;
+  }
 }
 @property --tw-translate-x {
   syntax: "*";
@@ -929,11 +951,6 @@
   syntax: "*";
   inherits: false;
   initial-value: 0;
-}
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
 @property --tw-gradient-position {
   syntax: "*";
@@ -1054,14 +1071,14 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -1069,7 +1086,6 @@
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
-      --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
       --tw-gradient-via: #0000;
@@ -1096,8 +1112,8 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-duration: initial;
+      --tw-border-style: solid;
     }
   }
 }
